# FRETBursts

./: .gitignore  .readthedocs.yml  .travis.yml  PIE (or) nsALEX FRET-HP3_G100uW_R100uW-all photons-TE300-H2MM.ipynb  README.md  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: build_wheel.yml  tests.yml
docs/: environment.yml
docs/source/: absolute_beginner.rst  conf.py  releasenotes.rst
docs/source/downloads/: frbcmplt.yml
fretbursts/: __init__.py  _version.py  background.py  bg_cache.py  burst_plot.py  burstlib.py  burstlib_ext.py  exptools.py  fret_fit.py  fretmath.py  loader.py  loader_legacy.py  mfit.py  ph_sel.py  select_bursts.py
fretbursts/fit/: exp_fitting.py
fretbursts/phtools/: burstsearch.py  burstsearch_c.pyx  phrates.py  phrates_cy.pyx
fretbursts/tests/: test_burst_plot.py  test_burstlib.py
fretbursts/utils/: misc.py
notebooks/: 1. First Steps - Start here if new to Jupyter Notebooks.ipynb  Example - 2CDE Method.ipynb  Example - Background estimation.ipynb  Example - Burst Variance Analysis.ipynb  Example - Customize the us-ALEX histogram.ipynb  Example - Exporting Burst Data Including Timestamps.ipynb  Example - FRET histogram fitting.ipynb  Example - Plotting timetraces with bursts.ipynb  Example - Selecting FRET populations.ipynb  Example - Working with timestamps and bursts.ipynb  Example- Combining Technical Repeats.ipynb  FRETBursts - 8-spot smFRET burst analysis.ipynb  FRETBursts - ns-ALEX example.ipynb  FRETBursts - us-ALEX smFRET burst analysis.ipynb
notebooks/dev/tests/: FRETBursts - Background save and load test.ipynb
tests/: conftest.py  fetch_files.py  test_burst_plot.py  test_burstlib.py  test_burstlib_ext.py  test_ph_sel.py
