[versioneer]
VCS = git
style = pep440
versionfile_source = fretbursts/_version.py
versionfile_build = fretbursts/_version.py
tag_prefix =
parentdir_prefix = fretbursts-

# [options]
# packages = find:
# python_requires = >=3.6
# install_requires = 
#     numpy >= 1.19
#     cython >= 0.29
#     matplotlib >= 3.0
#     scipy >= 1.2
#     pandas >= 0.23
#     seaborn >= 0.11.1
#     tables >= 3.5
#     phconvert >= 0.8
#     lmfit >= 1.0.1
